node-ports-only/foo_bar_com/bar/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-deployment
  labels:
    app: bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: bar
        image: nirulabs/httpd-v1:latest
        ports:
        - containerPort: 80
