node-ports-only/foo_bar_com/bar/bar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-ingress
spec:
  rules:
  - host: bar.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bar-service
            port:
              number: 8081
